--- a/Libraries/web scraping/Download WikiMedia categories (requests,bs4).ipynb
+++ b/Libraries/web scraping/Download WikiMedia categories (requests,bs4).ipynb
@@ -22,36 +22,44 @@
      "output_type": "stream",
      "text": [
       "Enter the full url of wikipedia category: https://commons.wikimedia.org/wiki/Category:St._Paul%27s_School,_Darjeeling\n",
-      "Enter The folder name inside which to download: st. paul's wikimedia\n",
+      "Enter The folder name inside which to download: kkk\n",
       "Downloading page https://commons.wikimedia.org/wiki/Category:St._Paul%27s_School,_Darjeeling ...\n",
+      "Downloading image Air View of St Pauls School.jpg...\n",
       "Downloading image Amitabh Bachchan at St. Paul's School, Darjeeling.jpg...\n",
       "Downloading image Bishop Foss Westcott's coffin leaving St. Paul's School, Darjeeling chapel.jpg...\n",
       "Downloading image Bishop Foss Westcott.JPG...\n",
+      "Downloading image Chapel of St Paul's School, Darjeeling.jpg...\n",
       "Downloading image Cotton and Milman Halls from Top Field, St. Paul's School, Darjeeling.JPG...\n",
       "Downloading image Cotton Hall from Quadrangle side, St. Paul's School, Darjeeling.JPG...\n",
       "Downloading image Darjeeling (Baedeker, 1914).jpg...\n",
       "Downloading image Darjeeling from above St. Paul's School.jpg...\n",
       "Downloading image Flag Staff at the center of Quad at St. Paul's School, Darjeeling.JPG...\n",
+      "Downloading image Full view of St Pauls School, darjeeling.jpg...\n",
       "Downloading image Gen. V.K. Singh with the Staff members.jpg...\n",
       "Downloading image General Bikram Singh Chief of Army Staff India.jpg...\n",
       "Downloading image General view of Darjeeling, showing the Snowy Range, 40 miles distant, as seen from St Paul's School (c. 1870s).jpg...\n",
       "Downloading image General view of Darjeeling, showing the Snowy Range, 40 miles distant, as seen from St. Paul's School, Darjeeling.jpg...\n",
       "Downloading image Hari Dang and Indira Gandhi, St. Paul's School, Darjeeling.jpg...\n",
+      "Downloading image Howard Block - ST Paul's School, Darjeeling.jpg...\n",
       "Downloading image Howard Block, St. Paul's School, Darjeeling 01.jpg...\n",
       "Downloading image Howard Block, St. Paul's School, Darjeeling 02.jpg...\n",
       "Downloading image Howard Block, St. Paul's School, Darjeeling 03.jpg...\n",
       "Downloading image Howard Block, St. Paul's School, Darjeeling 04.jpg...\n",
       "Downloading image Howard Block, St. Paul's School, Darjeeling 05.jpg...\n",
       "Downloading image Induction of the New Rector-St Paul's School Darjeeling.jpg...\n",
+      "Downloading image Inside Chapel of St Paul's School, Darjeeling.jpg...\n",
       "Downloading image List of St. Paul's, Darjeeling Rectors- Till 1974.jpg...\n",
       "Downloading image Logo of St Paul's School Darjeeling.jpg...\n",
       "Downloading image Main building and Westcott Hall of St. Paul's, Darjeeling.jpg...\n",
       "Downloading image Main building of St. Paul's, Darjeeling-2.JPG...\n",
       "Downloading image Main building of St. Paul's, Darjeeling.JPG...\n",
+      "Downloading image Map of Darjeeling in 1914, from- Darjeeling (Baedeker, 1914) (cropped).jpg...\n",
       "Downloading image Map of Darjeeling in 1914.jpg...\n",
       "Downloading image Old Main Gate of St. Paul's School, Darjeeling.jpg...\n",
       "Downloading image Panorama of Cotton and Milman Halls from Top Field, SPS Darjeeling.jpg...\n",
       "Downloading image Pelly's, HM Residence.jpg...\n",
+      "Downloading image Quad of St Paul's School, Darjeeling.jpg...\n",
+      "Downloading image Quadrangle of St Paul's School, Darjeeling.jpg...\n",
       "Downloading image Rev. D. A Howard shares a light moment with sixth formers on Sports Day..jpg...\n",
       "Downloading image School Bell of St. Paul's School, Darjeeling.jpg...\n",
       "Downloading image School Chapel, Front View, St. Paul's School, Darjeeling.jpg...\n",
@@ -65,12 +73,15 @@
       "Downloading image St. Paul's School, Darjeeling Mr Soler 3.jpg...\n",
       "Downloading image St. Paul's School, Darjeeling- Flag, modified.jpg...\n",
       "Downloading image St. Pauls School, Darjeeling.jpg...\n",
+      "Downloading image Tennis Court.jpg...\n",
       "Downloading image The Chopper landing on the Top Field.jpg...\n",
       "Downloading image The St. Paul's School, Darjeeling Crest.jpg...\n",
+      "Downloading image Top field St Paul's School, Darjeeling.jpg...\n",
+      "Downloading image View of Chapel of St Paul's School, Darjeeling.jpg...\n",
       "Downloading image Westcott Hall Building of St. PAul's School, Darjeeling.jpg...\n",
       "Done. \n",
       "\n",
-      "Pics were downloaded to: C:\\Users\\abhin\\Desktop\\GitHub\\Python\\Automate the Boring stuff\\st. paul's wikimedia\n"
+      "Pics were downloaded to: C:\\Users\\abhin\\Desktop\\GitHub\\Python\\Libraries\\web scraping\\kkk\n"
      ]
     }
    ],
