--- a/xMisc/Sort files into folders by extension.ipynb
+++ b/xMisc/Sort files into folders by extension.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Put the full path into `path` variable."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +18,8 @@
     "\n",
     "# Write the name of the directory here,\n",
     "# that needs to get sorted\n",
-    "path = os.getcwd() + '/sort'\n",
+    "# path = os.getcwd() + '/sort'\n",
+    "path = 'insert full path to folder'\n",
     "\n",
     "\n",
     "# This will create a properly organized\n",
@@ -60,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
