--- a/Libraries/web scraping/Download CBSE Results (selenium).ipynb
+++ b/Libraries/web scraping/Download CBSE Results (selenium).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,10 @@
     "from selenium import webdriver\n",
     "\n",
     "# Download latest driver here: https://chromedriver.chromium.org/downloads\n",
-    "browser = webdriver.Chrome(executable_path=os.path.join(os.getcwd(),'webdriver','chromedriver.exe'))\n",
+    "# browser = webdriver.Chrome(executable_path=os.path.join(os.getcwd(),'webdriver','chromedriver.exe'))\n",
+    "\n",
+    "# Download latest driver here: https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/\n",
+    "browser = webdriver.Edge(executable_path=os.path.join(os.getcwd(),'webdriver','msedgedriver.exe'))\n",
     "browser.get('http://resultsarchives.nic.in/cbseresults/cbseresults2013/class12/cbse122013.htm')\n",
     "\n",
     "roll = 9199260\n",
@@ -408,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
