--- a/Notes/String Formatting.ipynb
+++ b/Notes/String Formatting.ipynb
@@ -9,7 +9,16 @@
     "\n",
     "https://docs.python.org/3/library/string.html#format-specification-mini-language\n",
     "\n",
-    "[How do I create a multiline Python string with inline variables?](https://stackoverflow.com/a/10112665/2365231)"
+    "[How do I create a multiline Python string with inline variables?](https://stackoverflow.com/a/10112665/2365231)\n",
+    "\n",
+    "`.format` is a feature of string. Not `print()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numbers"
    ]
   },
   {
@@ -26,12 +35,122 @@
     }
    ],
    "source": [
+    "# round to 2 decimal points\n",
     "print(\"{:,.2f}\".format(342245.3423))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is seven \"9\" \"8\"\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# swap places of variable\n",
+    "x = 'seven \"{1}\" \"{0}\"'.format(8,9)\n",
+    "print('x is {}'.format(x))\n",
+    "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'seven \"8        \" \"    12345\"'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add padding of emptiness to the right (<), and to the left (>) till it's 9 digits in length\n",
+    "# add the double quotes to visualise the padding better\n",
+    "\n",
+    "'seven \"{:<9}\" \"{:>9}\"'.format(8,12345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'seven \"8000000000000\" \"0000012345678\"'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add padding of 0 to the right (<), and to the left (>) till it's 13 digits in length\n",
+    "# can't add padding with other characters\n",
+    "\n",
+    "'seven \"{:<013}\" \"{:>013}\"'.format(8,12345678)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'seven \"123456780\" \"000000008\"'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# above example but including variable swap\n",
+    "\n",
+    "'seven \"{1:<09}\" \"{0:>09}\"'.format(8,12345678)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is seven 800000000, 000000009\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 8\n",
+    "b = 9\n",
+    "x = f'seven {a:<09}, {b:>09}'\n",
+    "print('x is {}'.format(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -48,71 +167,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Floating Point formatting\n",
+    "The general syntax for a format placeholder is: `%[flags][width][.precision]type`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20.00000'"
+       "\"Int: ' 1', Float: '07.67'\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'%.*f' % (5, 20)"
+    "\"Int: '%2d', Float: '%05.2f'\" % (1, 7.669)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`%2d` means The number will be printed with 2 characters. If the number consists only of one digit, the output is padded with 1 leading blanks.\n",
+    "\n",
+    "`%05.2f` is a format description for a float number. Like other placeholders, it is introduced with the % character. \n",
+    "* `0`: Pad with 0 to satisfy the width\n",
+    "* `5`: Width. This number includes the decimal point and all the digits, i.e. before and after the decimal point.\n",
+    "Our float number 05.333 has to be formatted with 5 characters. \n",
+    "* `2`: Precision of decimal number\n",
+    "* `f`: float."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my fav number is 3 . How nice 4\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'20.10000'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = '3'\n",
-    "y=4\n",
-    "print(\"my fav number is\",x,'.','How nice',y)"
+    "'%.*f' % (5, 20.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello Abhinav you are invited to Sunburn at time: 6pm\n",
-      "hello Abhinav you are invited to Sunburn at time: 6pm\n",
-      "hello Abhinav you are invited to Sunburn at time: 6pm\n"
-     ]
-    }
-   ],
-   "source": [
-    "name =\"Abhinav\"\n",
-    "place=\"Sunburn\"\n",
-    "time = \"6pm\"\n",
-    "print('hello %s you are invited to %s at time: %s' % (name, place, time))\n",
-    "print('hello {} you are invited to {} at time: {}'.format(name, place, time))\n",
-    "print(f'hello {name} you are invited to {place} at time: {time}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +239,7 @@
        "1.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,12 +253,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Strings\n",
+    "`F-strings` are faster than the two most commonly used string formatting mechanisms, which are `%` formatting and `str.format()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Abhinav you are invited to Sunburn at time: 6pm\n",
+      "Hello Abhinav you are invited to Sunburn at time: 6pm\n",
+      "Hello Abhinav you are invited to Sunburn at time: 6pm\n"
+     ]
+    }
+   ],
+   "source": [
+    "name  = \"Abhinav\"\n",
+    "place = \"Sunburn\"\n",
+    "time  = \"6pm\"\n",
+    "print('Hello %s you are invited to %s at time: %s' % (name, place, time))\n",
+    "print('Hello {} you are invited to {} at time: {}'.format(name, place, time))\n",
+    "print(f'Hello {name} you are invited to {place} at time: {time}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "September 16, 2021\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    " \n",
+    "today = datetime.datetime.today()\n",
+    "print(f\"{today:%B %d, %Y}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Center align: ##############Lorem Ipsum###############\n",
+      "Left Align: Lorem Ipsum-----------------------------\n",
+      "Right align: -----------------------------Lorem Ipsum\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Align string with string() method\n",
+    " \n",
+    "cstr = \"Lorem Ipsum\"\n",
+    "\n",
+    "print (\"Center align:\",cstr.center(40, '#'))\n",
+    "print (\"Left Align:\", cstr.ljust(40, '-'))\n",
+    "print (\"Right align:\", cstr.rjust(40, '-'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Multi line print"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -180,8 +375,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print function feature"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my fav number is 3 . How nice 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using comma to insert variable automatically adds spaces.\n",
+    "x = '3'\n",
+    "y = 4\n",
+    "print(\"my fav number is\",x,'.','How nice',y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +514,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-9c3249b2294d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-21-9c3249b2294d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"bytes\") to str"
      ]
     }
@@ -303,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +534,7 @@
        "'This is string.ABCD'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +555,7 @@
        "b'ABCDThis is string.'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +576,7 @@
        "b'\\xff\\xfe\\x00\\x00T\\x00\\x00\\x00h\\x00\\x00\\x00i\\x00\\x00\\x00s\\x00\\x00\\x00 \\x00\\x00\\x00i\\x00\\x00\\x00s\\x00\\x00\\x00 \\x00\\x00\\x00s\\x00\\x00\\x00t\\x00\\x00\\x00r\\x00\\x00\\x00i\\x00\\x00\\x00n\\x00\\x00\\x00g\\x00\\x00\\x00.\\x00\\x00\\x00'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +680,7 @@
        "'0b101'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +700,7 @@
        "'5'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +720,7 @@
        "5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +740,7 @@
        "5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
